Fixed padding on terms of service, fixed dumb phone overflow, added endless scrolling

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -305,6 +305,13 @@ footer.page-footer {
 .copy-right {
 	color: #FAD93D;
 }
+
+@media (max-width : 567px){
+	.helper-b{
+		font-size: 12px;
+		padding: 4px;
+	}
+}
 @media only screen and (max-width: 768px)
 and (max-width : 982px){
   .socialed {
